@@ -62,7 +62,6 @@ namespace WebCore {
         
         OwnPtr<ImageBuffer> m_mask;
         FloatRect m_maskRect;
-        IntRect m_paintRect;
     };
 
     SVGResourceMasker* getMaskerById(Document*, const AtomicString&);
